name:           haskell-src-qq
version:        0.1.0.0
description:    See README
homepage:       https://github.com/themattchan/haskell-src-qq#readme
bug-reports:    https://github.com/themattchan/haskell-src-qq/issues
author:         Matthew Chan
maintainer:     matt@parametri.city
copyright:      2018 Matthew Chan
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/themattchan/haskell-src-qq

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
--    , haskell-src ==1.0.*
    , haskell-src-exts ==1.20.*
    , template-haskell >=2.11.0
  exposed-modules:
      Language.Haskell.QuasiQuote
  other-modules:
      Paths_haskell_src_qq
  default-language: Haskell2010

test-suite haskell-src-qq-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-src-qq
  other-modules:
      Paths_haskell_src_qq
  default-language: Haskell2010
